    straight line.

3.  Exposed is.grob() and valid.just() via the NAMESPACE.

4.  Fixed bug in downViewport(), which meant that unsuccessful
    downViewport()s were still being recorded on the graphics
    engine display list.  This could cause interesting results
    when a window is resized (i.e., when the display list is 
    replayed).  

    Bug reported by Felix Andrews.


Changes from grid_2.7.0 to grid_2.8.0:
------------------------------------

1.  Added grid.null() and nullGrob();  grob that is guaranteed
    to have zero-width, zero-height, and draw nothing.

    Useful as zero-size placeholder AND as invisible reference
    point for other grobs to draw relative to.

2.  Fixed bug in listing, via grid.ls(), of frame grobs.  If the frame
    had a vpPath in its 'vp' component, you got an error from vpStack().

    Problem reported by Hadley Wickham.

3.  Fixed a bug in grid.ls() when attempting to list the display list
    following the removal of a grob (i.e., so that there were NULLs
    in the display list).

    Problem reported by Felix Andrews.


Changes from grid_2.6.0 to grid_2.7.0:
------------------------------------

1.  Grid will no longer complain about clipping to a rotated
    viewport if the rotation is a multiple of 90 degrees.

    Prompted by report from Gustaf Rydevik.

2.  Open Xsplines must have zero shape for first and last
    control point, but this was not being enforced correctly
    for the case where there were multiple Xsplines in a
    single grid.xspline() call (i.e., with use of 'id' or
    'id.length').  The problem can be seen with this code
    (most curves do not connect to the first control point
    [there are also subtle errors in the curve shapes]):

        grid.newpage()
        pushViewport(viewport(w=.5, h=.5))
        grid.xspline(x=outer(c(0, .5, 1, .5), 5:1/5),
                     s=1,
                     y=outer(c(.5, 1, .5, 0), 5:1/5),
                     id.lengths=rep(4, 5),